--- a/html/options.html
+++ b/html/options.html
@@ -13,7 +13,7 @@
 	<body>
 		<div class="page img-rounded">
 			<div class="col-md-6">
-				<h4 id="conImgur" class="pads">Connect Your Imgur Account: </h3>	
+				<h4 id="conImgur" class="pads">Connect Your Imgur Account: (not implemented)</h3>	
 				<h4 id="openImg" class="pads">Open The Image After Uploading? </h3>
 			</div>
 			<div class="col-md-6">
